Fix overlap on lines with inline code

--- a/html/src/style.css
+++ b/html/src/style.css
@@ -42,22 +42,22 @@ tbody tr:nth-child(2n) td {
 
 /* top-left border-radius */
 table thead tr:first-child th:first-child {
-  border-top-left-radius: 4px;
+    border-top-left-radius: 4px;
 }
 
 /* top-right border-radius */
 table thead tr:first-child th:last-child {
-  border-top-right-radius: 4px;
+    border-top-right-radius: 4px;
 }
 
 /* bottom-left border-radius */
 table tbody tr:last-child td:first-child {
-  border-bottom-left-radius: 4px;
+    border-bottom-left-radius: 4px;
 }
 
 /* bottom-right border-radius */
 table tbody tr:last-child td:last-child {
-  border-bottom-right-radius: 4px;
+    border-bottom-right-radius: 4px;
 }
 
 select {
@@ -81,13 +81,13 @@ select {
     -moz-box-sizing: border-box;
     -webkit-box-sizing: border-box;
     right: 0;
-    width:25%;
+    width: 25%;
     height: 100%;
-    float:right;
+    float: right;
     border-left: 1px solid #000;
     padding: 10px;
     /*padding-bottom: 2em;*/
-    position:absolute;
+    position: absolute;
     overflow: auto;
 }
 
@@ -113,7 +113,7 @@ select {
     --background: #333;
     --animation: terminal-bar;
     /* padding: 10px; */
-    --size:1.5;
+    --size: 1.5;
 }
 
 code {
@@ -123,6 +123,7 @@ code {
     border-radius: 4px;
     color: #F33;
     padding: 2px;
+    line-height: 1.75em;
 }
 
 pre code {
@@ -134,7 +135,9 @@ pre code {
     padding: 2px;
 }
 
-#dropbox, #connection-problems, #welcome-back {
+#dropbox,
+#connection-problems,
+#welcome-back {
     position: absolute;
     width: 100%;
     height: 100%;
@@ -181,7 +184,8 @@ pre code {
     display: none;
 }
 
-#connection-problems div, #welcome-back div {
+#connection-problems div,
+#welcome-back div {
     position: absolute;
     background-color: white;
     border-radius: 4px;
@@ -206,6 +210,7 @@ pre code {
     from {
         transform: rotate(0deg);
     }
+
     to {
         transform: rotate(360deg);
     }
